[build-system]
requires = ["setuptools>=61.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "python-axolotl-curve25519"
version = "0.4.2"
description = "curve25519 with ed25519 signatures, used by libaxolotl"
authors = [
  { name = "Tarek Galal", email = "tare2.galal@gmail.com" }
]
license = { text = "GPLv3" }
readme = ""
requires-python = ">=3.7,<4"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "Operating System :: OS Independent"
]

[tool.setuptools]
packages = []
include-package-data = false
